--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,11 @@ dependencies {
     testRuntimeOnly(
             "org.junit.jupiter:junit-jupiter-engine:5.8.0"
     )
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.24'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 tasks.withType(JavaCompile) {
